--- a/server/package.json
+++ b/server/package.json
@@ -6,11 +6,14 @@
   "type": "module",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "npx nodemon src/server.js"
+    "start": "npx nodemon -r dotenv/config  src/index.js"
   },
   "author": "Giriraj singh shekhawat",
   "license": "ISC",
   "dependencies": {
+    "cookie-parser": "^1.4.6",
+    "cors": "^2.8.5",
+    "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "mongoose": "^8.0.3"
   },
